partially set up question scene

--- a/iquiz/Base.lproj/Main.storyboard
+++ b/iquiz/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -65,7 +66,7 @@
                                     <outlet property="descriptionText" destination="ymH-Zc-ax0" id="Xha-Wm-NuT"/>
                                     <outlet property="imageObject" destination="etQ-rT-MxR" id="sdi-uk-oc6"/>
                                     <outlet property="subjectText" destination="8z6-FY-zxr" id="VQe-hh-eoL"/>
-                                    <segue destination="J5N-oP-rM3" kind="show" id="WGW-aO-iwK"/>
+                                    <segue destination="vOe-bp-Tc3" kind="show" id="KhD-j8-1qB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -80,33 +81,105 @@
             </objects>
             <point key="canvasLocation" x="-228" y="-662.51874062968523"/>
         </scene>
-        <!--Questions-->
-        <scene sceneID="3tJ-s4-kLw">
+        <!--Question-->
+        <scene sceneID="x9T-jq-b6Z">
             <objects>
-                <tableViewController title="Questions" id="J5N-oP-rM3" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Gf0-fj-l0b">
+                <viewController title="Question" id="vOe-bp-Tc3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lfa-ge-SGO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Question Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qd-YO-DU3">
+                                <rect key="frame" x="50" y="97" width="275" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IGB-gW-YFc">
+                                <rect key="frame" x="50" y="497" width="275" height="30"/>
+                                <state key="normal" title="Submit"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="MRw-w3-rq0">
+                                <rect key="frame" x="50" y="278.5" width="275" height="110"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="F18-vz-mF2">
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="110"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvO-Tx-o6k">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
+                                                <state key="normal" title="A1"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BNk-cO-TFF">
+                                                <rect key="frame" x="0.0" y="80" width="125" height="30"/>
+                                                <state key="normal" title="A3"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="jhu-fl-Maj">
+                                        <rect key="frame" x="150" y="0.0" width="125" height="110"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AOu-e4-wEq">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
+                                                <state key="normal" title="A2"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XJ8-3f-kSU">
+                                                <rect key="frame" x="0.0" y="80" width="125" height="30"/>
+                                                <state key="normal" title="A4"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8Qd-YO-DU3" firstAttribute="centerX" secondItem="lfa-ge-SGO" secondAttribute="centerX" id="KeT-nB-n5c"/>
+                            <constraint firstItem="MRw-w3-rq0" firstAttribute="leading" secondItem="b6P-zt-eru" secondAttribute="leading" constant="50" id="LkY-PW-w7Z"/>
+                            <constraint firstItem="MRw-w3-rq0" firstAttribute="centerX" secondItem="lfa-ge-SGO" secondAttribute="centerX" id="OxF-Hk-BnC"/>
+                            <constraint firstItem="b6P-zt-eru" firstAttribute="trailing" secondItem="IGB-gW-YFc" secondAttribute="trailing" constant="50" id="YyY-y4-6ZQ"/>
+                            <constraint firstItem="IGB-gW-YFc" firstAttribute="leading" secondItem="b6P-zt-eru" secondAttribute="leading" constant="50" id="a7T-Kz-SEF"/>
+                            <constraint firstItem="8Qd-YO-DU3" firstAttribute="leading" secondItem="b6P-zt-eru" secondAttribute="leading" constant="50" id="b72-1s-7Up"/>
+                            <constraint firstItem="b6P-zt-eru" firstAttribute="trailing" secondItem="8Qd-YO-DU3" secondAttribute="trailing" constant="50" id="jmI-76-nrE"/>
+                            <constraint firstItem="MRw-w3-rq0" firstAttribute="centerY" secondItem="lfa-ge-SGO" secondAttribute="centerY" id="ldk-QO-ZVO"/>
+                            <constraint firstItem="b6P-zt-eru" firstAttribute="trailing" secondItem="MRw-w3-rq0" secondAttribute="trailing" constant="50" id="nwB-9W-Jhq"/>
+                            <constraint firstItem="IGB-gW-YFc" firstAttribute="centerX" secondItem="lfa-ge-SGO" secondAttribute="centerX" id="wxd-MQ-mw9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="b6P-zt-eru"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oEn-VF-ClM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="740" y="-663.41829085457277"/>
+        </scene>
+        <!--Answer-->
+        <scene sceneID="11Z-P5-MfM">
+            <objects>
+                <viewController title="Answer" id="F4T-NR-dnk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jt7-aV-CCG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="tUP-ew-oFO">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tUP-ew-oFO" id="7Xq-CR-dx1">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="J5N-oP-rM3" id="w7M-am-f1A"/>
-                            <outlet property="delegate" destination="J5N-oP-rM3" id="umh-cs-5Sj"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EcE-lq-fEy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <viewLayoutGuide key="safeArea" id="fWG-RS-Mcm"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mY3-Go-UEh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="783" y="-663"/>
+            <point key="canvasLocation" x="1690" y="-663"/>
+        </scene>
+        <!--Finish-->
+        <scene sceneID="q4i-vK-QJ5">
+            <objects>
+                <viewController title="Finish" id="scZ-dd-lyq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TyK-nh-Cd9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="kXO-ou-fs1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1jS-M5-qEW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2583" y="-663"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zJF-CX-A2g">
