--- a/iquiz/Base.lproj/Main.storyboard
+++ b/iquiz/Base.lproj/Main.storyboard
@@ -89,15 +89,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Question Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qd-YO-DU3">
-                                <rect key="frame" x="50" y="97" width="275" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qd-YO-DU3">
+                                <rect key="frame" x="50" y="114" width="275" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IGB-gW-YFc">
-                                <rect key="frame" x="50" y="497" width="275" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IGB-gW-YFc">
+                                <rect key="frame" x="50" y="537" width="275" height="30"/>
                                 <state key="normal" title="Submit"/>
+                                <connections>
+                                    <segue destination="F4T-NR-dnk" kind="show" id="87B-Xm-l0O"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="MRw-w3-rq0">
                                 <rect key="frame" x="50" y="278.5" width="275" height="110"/>
@@ -133,8 +136,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="b6P-zt-eru" firstAttribute="bottom" secondItem="IGB-gW-YFc" secondAttribute="bottom" constant="100" id="Dma-GM-zyW"/>
                             <constraint firstItem="8Qd-YO-DU3" firstAttribute="centerX" secondItem="lfa-ge-SGO" secondAttribute="centerX" id="KeT-nB-n5c"/>
                             <constraint firstItem="MRw-w3-rq0" firstAttribute="leading" secondItem="b6P-zt-eru" secondAttribute="leading" constant="50" id="LkY-PW-w7Z"/>
+                            <constraint firstItem="8Qd-YO-DU3" firstAttribute="top" secondItem="b6P-zt-eru" secondAttribute="top" constant="50" id="ONj-pJ-8dp"/>
                             <constraint firstItem="MRw-w3-rq0" firstAttribute="centerX" secondItem="lfa-ge-SGO" secondAttribute="centerX" id="OxF-Hk-BnC"/>
                             <constraint firstItem="b6P-zt-eru" firstAttribute="trailing" secondItem="IGB-gW-YFc" secondAttribute="trailing" constant="50" id="YyY-y4-6ZQ"/>
                             <constraint firstItem="IGB-gW-YFc" firstAttribute="leading" secondItem="b6P-zt-eru" secondAttribute="leading" constant="50" id="a7T-Kz-SEF"/>
@@ -158,7 +163,64 @@
                     <view key="view" contentMode="scaleToFill" id="Jt7-aV-CCG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8hd-A5-nbn">
+                                <rect key="frame" x="50" y="537" width="275" height="30"/>
+                                <state key="normal" title="Next"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="GLr-w7-cPs">
+                                <rect key="frame" x="50" y="278" width="275" height="110"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="zC9-Qs-78V">
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="110"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34e-an-z5l">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
+                                                <state key="normal" title="A1"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="szr-SZ-hfP">
+                                                <rect key="frame" x="0.0" y="80" width="125" height="30"/>
+                                                <state key="normal" title="A3"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="ckl-dO-9OG">
+                                        <rect key="frame" x="150" y="0.0" width="125" height="110"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Xj-ZS-PVj">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
+                                                <state key="normal" title="A2"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sg4-qm-cgS">
+                                                <rect key="frame" x="0.0" y="80" width="125" height="30"/>
+                                                <state key="normal" title="A4"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06r-vQ-2xa">
+                                <rect key="frame" x="50" y="114" width="275" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8hd-A5-nbn" firstAttribute="leading" secondItem="fWG-RS-Mcm" secondAttribute="leading" constant="50" id="1B2-ce-Y6W"/>
+                            <constraint firstItem="fWG-RS-Mcm" firstAttribute="trailing" secondItem="GLr-w7-cPs" secondAttribute="trailing" constant="50" id="4Ee-A0-KIN"/>
+                            <constraint firstItem="GLr-w7-cPs" firstAttribute="centerX" secondItem="Jt7-aV-CCG" secondAttribute="centerX" id="4Ya-o4-9cp"/>
+                            <constraint firstItem="06r-vQ-2xa" firstAttribute="leading" secondItem="fWG-RS-Mcm" secondAttribute="leading" constant="50" id="9er-Dj-iF0"/>
+                            <constraint firstItem="06r-vQ-2xa" firstAttribute="top" secondItem="fWG-RS-Mcm" secondAttribute="top" constant="50" id="9kF-Nd-l9k"/>
+                            <constraint firstItem="06r-vQ-2xa" firstAttribute="centerX" secondItem="Jt7-aV-CCG" secondAttribute="centerX" id="Hiz-MO-fZc"/>
+                            <constraint firstItem="8hd-A5-nbn" firstAttribute="centerX" secondItem="Jt7-aV-CCG" secondAttribute="centerX" id="L8G-k9-uDv"/>
+                            <constraint firstItem="GLr-w7-cPs" firstAttribute="leading" secondItem="fWG-RS-Mcm" secondAttribute="leading" constant="50" id="RSy-Nr-cyD"/>
+                            <constraint firstItem="fWG-RS-Mcm" firstAttribute="bottom" secondItem="8hd-A5-nbn" secondAttribute="bottom" constant="100" id="SvH-Np-quE"/>
+                            <constraint firstItem="fWG-RS-Mcm" firstAttribute="trailing" secondItem="8hd-A5-nbn" secondAttribute="trailing" constant="50" id="UJR-kU-kBE"/>
+                            <constraint firstItem="fWG-RS-Mcm" firstAttribute="trailing" secondItem="06r-vQ-2xa" secondAttribute="trailing" constant="50" id="a5S-vZ-h1c"/>
+                            <constraint firstItem="GLr-w7-cPs" firstAttribute="centerY" secondItem="Jt7-aV-CCG" secondAttribute="centerY" id="cpv-dO-SYp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fWG-RS-Mcm"/>
                     </view>
                 </viewController>
